--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
-
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8" />
     <title>aws-1`</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -18,6 +21,14 @@
         <button @click="post">post</button>
         &nbsp;
         <p>{{res}}</p>
+      </div>
+      &nbsp;
+      <div class="history">
+        <button @click="get">gethistory</button>
+        <div class="his" v-for="(i,index) in history" :key="index">
+          {{"User: "+i.id +', post in : '+ i.LatestGreetingTime}}
+          <i class="bi bi-trash" @click="del(i.id)"></i>
+        </div>
       </div>
     </div>
     <script src="https://unpkg.com/vue@next"></script>
